Simply collect(Collectors.toList())