@@ -26,13 +26,13 @@ import org.springframework.data.domain.PageRequest;
 
 /**
  * Implementation of activity query operations for activity management and reporting.
- * 
+ *
  * <p>This class provides comprehensive functionality for querying and retrieving
  * activity data, including pagination, full-text search, and summary generation.</p>
- * 
+ *
  * <p>It handles activity data enrichment with project names and user information,
  * supporting both detailed activity queries and summary statistics.</p>
- * 
+ *
  * <p>Key features include:
  * <ul>
  *   <li>Activity pagination with specification-based filtering</li>
@@ -42,7 +42,7 @@ import org.springframework.data.domain.PageRequest;
  *   <li>Activity count statistics by main target</li>
  *   <li>Summary query registration for reporting</li>
  * </ul></p>
- * 
+ *
  * @author XiaoLong Liu
  */
 @Biz
@@ -67,13 +67,13 @@ public class ActivityQueryImpl implements ActivityQuery {
 
   /**
    * Finds activities with pagination, filtering, and optional full-text search.
-   * 
+   *
    * <p>This method retrieves activities based on specification criteria with support
    * for pagination and optional full-text search capabilities.</p>
-   * 
+   *
    * <p>The method automatically enriches activity data with project names and
    * user information for enhanced display.</p>
-   * 
+   *
    * @param spec the specification for filtering activities
    * @param pageable the pagination and sorting parameters
    * @param fullTextSearch whether to use full-text search
@@ -91,7 +91,7 @@ public class ActivityQueryImpl implements ActivityQuery {
         Page<Activity> page = fullTextSearch
             ? activitySearchRepo.find(spec.getCriteria(), pageable, Activity.class, match)
             : activityListRepo.find(spec.getCriteria(), pageable, Activity.class, null);
-        
+
         // Enrich activity data with project names and user information if content exists
         if (page.hasContent()) {
           setProjectName(page);
@@ -104,11 +104,11 @@ public class ActivityQueryImpl implements ActivityQuery {
 
   /**
    * Enriches activities with project names for enhanced display.
-   * 
+   *
    * <p>This method retrieves project information for all activities in the page
    * and sets the project name for each activity. Activities without associated
    * projects are marked with "--".</p>
-   * 
+   *
    * @param page the page of activities to enrich with project names
    */
   @Override
@@ -117,7 +117,7 @@ public class ActivityQueryImpl implements ActivityQuery {
     Map<Long, Project> projectMap = projectQuery.find0ById(page.getContent()
             .stream().map(Activity::getProjectId).collect(Collectors.toSet()))
         .stream().collect(Collectors.toMap(Project::getId, p -> p));
-    
+
     // Set project name for each activity or mark as unknown if project not found
     for (Activity activity : page.getContent()) {
       if (projectMap.containsKey(activity.getProjectId())) {
@@ -130,12 +130,12 @@ public class ActivityQueryImpl implements ActivityQuery {
 
   /**
    * Finds activity summaries for a specific target with user information enrichment.
-   * 
+   *
    * <p>This method retrieves all activities for a given target and converts them
    * to summary format with enriched user information.</p>
-   * 
+   *
    * <p>The method returns null if no activities are found for the target.</p>
-   * 
+   *
    * @param targetType the type of target to search for
    * @param targetId the ID of the target
    * @return list of activity summaries or null if no activities found
@@ -147,21 +147,21 @@ public class ActivityQueryImpl implements ActivityQuery {
     if (isEmpty(activities)) {
       return null;
     }
-    
+
     // Enrich activities with user information
     userManager.setUserNameAndAvatar(activities, "userId", "fullName", "avatar");
-    
+
     // Convert activities to summary format
     return activities.stream().map(ActivityConverter::toActivitySummary)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
    * Gets the total number of activities for a main target.
-   * 
+   *
    * <p>This method counts all activities associated with a main target,
    * providing statistics for activity volume analysis.</p>
-   * 
+   *
    * @param id the main target ID
    * @return the total number of activities for the main target
    */
